--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -35,11 +35,11 @@
             <div class="d-flex align-items-center gap-4">
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="role" id="role_user" value="user" checked>
-                <label class="form-check-label" for="role_user">Job Seeker</label>
+                <label class="form-check-label" for="role_user">Job Poster</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="role" id="role_worker" value="worker">
-                <label class="form-check-label" for="role_worker">Job Poster</label>
+                <label class="form-check-label" for="role_worker">Job Seeker</label>
               </div>
             </div>
           </div>
